# jsc-bluetooth

./: README.md  btclient.py  run.sh
src/: Makefile.am  cleanup.sh  configure.ac
src/btservice/: Makefile.am  btclient.c  btclient.h  btcommon.h  btserver.c  btserver.h
src/main/: Makefile.am  main-client.c  main-server.c  main.c  main.h
src/utils/: logger.c  logger.h
