bin_PROGRAMS = server client
server_SOURCES = main-server.c
server_CPPFLAGS = -I$(top_srcdir)/btservice/
server_CPPFLAGS += -I$(top_srcdir)/utils/
server_CPPFLAGS += ${GLIB_CFLAGS}
server_CPPFLAGS += ${GIOUNIX_CFLAGS}
server_LDADD = ${GLIB_LIBS}
server_LDADD += ${DBUSGLIB_LIBS}
server_LDADD += ${DBUS_LIBS}
server_LDADD += ${GIO_LIBS}
server_LDADD += ../btservice/libbtservice.la
server_LDADD += ../utils/libjscutils.la

client_SOURCES = main-client.c
client_CPPFLAGS = -I$(top_srcdir)/btservice/
client_CPPFLAGS += -I$(top_srcdir)/utils/
client_CPPFLAGS += ${GLIB_CFLAGS}
client_CPPFLAGS += ${GIOUNIX_CFLAGS}
client_LDADD = ${GLIB_LIBS}
client_LDADD += ${DBUSGLIB_LIBS}
client_LDADD += ${DBUS_LIBS}
client_LDADD += ${GIO_LIBS}
client_LDADD += ../btservice/libbtservice.la
client_LDADD += ../utils/libjscutils.la
